deprecated version runtime.exec