@@ -5,8 +5,7 @@ import java.io.*;
 public class Main {
     public static void main(String[] args) {
         try {
-            ProcessBuilder pb = new ProcessBuilder("ls", "-l");
-            Process process = pb.start();
+            Process process = Runtime.getRuntime().exec("ls -l");
             InputStreamReader inputReader = new InputStreamReader(process.getInputStream());
             BufferedReader reader = new BufferedReader(inputReader);
             String line;
